// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentListComponent should snap with default fields 1`] = `
<tm-student-list
  backendUrl={[Function String]}
  courseId=""
  courseService={[Function CourseService]}
  enableRemindButton="false"
  httpRequestService={[Function HttpRequestService]}
  isHideTableHead="false"
  listOfStudentsToHide={[Function Array]}
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  router={[Function Router]}
  sections={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  useGrayHeading={[Function Boolean]}
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-bordered table-striped m-0"
    >
      <thead
        class="thead-gray"
        ng-reflect-ng-class="[object Object]"
      >
        <tr>
          <th>
            Photo
          </th>
          
          <th>
             Section 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Team 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Student Name 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Status 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Email 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
            Action(s)
          </th>
        </tr>
      </thead>
      <tbody>
        
      </tbody>
    </table>
  </div>
</tm-student-list>
`;

exports[`StudentListComponent should snap with some student list data 1`] = `
<tm-student-list
  backendUrl={[Function String]}
  courseId=""
  courseService={[Function CourseService]}
  enableRemindButton="false"
  httpRequestService={[Function HttpRequestService]}
  isHideTableHead="false"
  listOfStudentsToHide={[Function Array]}
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  router={[Function Router]}
  sections={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  useGrayHeading={[Function Boolean]}
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-bordered table-striped m-0"
    >
      <thead
        class="thead-gray"
        ng-reflect-ng-class="[object Object]"
      >
        <tr>
          <th>
            Photo
          </th>
          
          <th>
             Section 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Team 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Student Name 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Status 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Email 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
            Action(s)
          </th>
        </tr>
      </thead>
      <tbody>
        
        
        
        <tr
          s=""
        >
          <td
            class="align-center"
          >
            
            
            <a
              href="null"
              role="button"
            >
              View Photo
            </a>
            
          </td>
          
          <td>
            1
          </td>
          <td>
            1
          </td>
          <td>
            tester
          </td>
          <td
            class="align-center"
          >
            Yet to join
          </td>
          <td>
            tester@tester.com
          </td>
          <td
            class="no-print align-center"
          >
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/details?courseid=&studentemail=tester@tester.com"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View the details of the studen"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               View
            </a>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/edit?courseid=&studentemail=tester@tester.com"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Use this to edit the details o"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               Edit
            </a>
            
            
            
            <button
              class="btn btn-secondary btn-sm mr-2"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Delete the student and the cor"
            >
              Delete
            </button>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/students/records?courseid=&studentemail=tester@tester.com"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View all data about this stude"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/students/recor"
            >
               All Records
            </a>
            
          </td>
        </tr>
        
        
        
        <tr
          s=""
        >
          <td
            class="align-center"
          >
            
            
            <a
              href="null"
              role="button"
            >
              View Photo
            </a>
            
          </td>
          
          <td>
            Tutorial Group 1
          </td>
          <td>
            Team 1
          </td>
          <td>
            Alice Betsy
          </td>
          <td
            class="align-center"
          >
            Joined
          </td>
          <td>
            alice.b.tmms@gmail.tmt
          </td>
          <td
            class="no-print align-center"
          >
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/details?courseid=&studentemail=alice.b.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View the details of the studen"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               View
            </a>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/edit?courseid=&studentemail=alice.b.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Use this to edit the details o"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               Edit
            </a>
            
            
            
            <button
              class="btn btn-secondary btn-sm mr-2"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Delete the student and the cor"
            >
              Delete
            </button>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/students/records?courseid=&studentemail=alice.b.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View all data about this stude"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/students/recor"
            >
               All Records
            </a>
            
          </td>
        </tr>
        <tr
          s=""
        >
          <td
            class="align-center"
          >
            
            
            <a
              href="null"
              role="button"
            >
              View Photo
            </a>
            
          </td>
          
          <td>
            Tutorial Group 1
          </td>
          <td>
            Team 1
          </td>
          <td>
            Benny Charles
          </td>
          <td
            class="align-center"
          >
            Joined
          </td>
          <td>
            benny.c.tmms@gmail.tmt
          </td>
          <td
            class="no-print align-center"
          >
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/details?courseid=&studentemail=benny.c.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View the details of the studen"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               View
            </a>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/edit?courseid=&studentemail=benny.c.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Use this to edit the details o"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               Edit
            </a>
            
            
            
            <button
              class="btn btn-secondary btn-sm mr-2"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Delete the student and the cor"
            >
              Delete
            </button>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/students/records?courseid=&studentemail=benny.c.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View all data about this stude"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/students/recor"
            >
               All Records
            </a>
            
          </td>
        </tr>
        <tr
          s=""
        >
          <td
            class="align-center"
          >
            
            
            <a
              href="null"
              role="button"
            >
              View Photo
            </a>
            
          </td>
          
          <td>
            Tutorial Group 1
          </td>
          <td>
            Team 1
          </td>
          <td>
            Danny Engrid
          </td>
          <td
            class="align-center"
          >
            Joined
          </td>
          <td>
            danny.e.tmms@gmail.tmt
          </td>
          <td
            class="no-print align-center"
          >
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/details?courseid=&studentemail=danny.e.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View the details of the studen"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               View
            </a>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/edit?courseid=&studentemail=danny.e.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Use this to edit the details o"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               Edit
            </a>
            
            
            
            <button
              class="btn btn-secondary btn-sm mr-2"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Delete the student and the cor"
            >
              Delete
            </button>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/students/records?courseid=&studentemail=danny.e.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View all data about this stude"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/students/recor"
            >
               All Records
            </a>
            
          </td>
        </tr>
        <tr
          s=""
        >
          <td
            class="align-center"
          >
            
            
            <a
              href="null"
              role="button"
            >
              View Photo
            </a>
            
          </td>
          
          <td>
            Tutorial Group 1
          </td>
          <td>
            Team 1
          </td>
          <td>
            Emma Farrell
          </td>
          <td
            class="align-center"
          >
            Joined
          </td>
          <td>
            emma.f.tmms@gmail.tmt
          </td>
          <td
            class="no-print align-center"
          >
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/details?courseid=&studentemail=emma.f.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View the details of the studen"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               View
            </a>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/edit?courseid=&studentemail=emma.f.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Use this to edit the details o"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               Edit
            </a>
            
            
            
            <button
              class="btn btn-secondary btn-sm mr-2"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Delete the student and the cor"
            >
              Delete
            </button>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/students/records?courseid=&studentemail=emma.f.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View all data about this stude"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/students/recor"
            >
               All Records
            </a>
            
          </td>
        </tr>
        
      </tbody>
    </table>
  </div>
</tm-student-list>
`;

exports[`StudentListComponent should snap with some student list data and some students to hide 1`] = `
<tm-student-list
  backendUrl={[Function String]}
  courseId=""
  courseService={[Function CourseService]}
  enableRemindButton="false"
  httpRequestService={[Function HttpRequestService]}
  isHideTableHead="false"
  listOfStudentsToHide={[Function Array]}
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  router={[Function Router]}
  sections={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  useGrayHeading={[Function Boolean]}
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-bordered table-striped m-0"
    >
      <thead
        class="thead-gray"
        ng-reflect-ng-class="[object Object]"
      >
        <tr>
          <th>
            Photo
          </th>
          
          <th>
             Section 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Team 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Student Name 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Status 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Email 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
            Action(s)
          </th>
        </tr>
      </thead>
      <tbody>
        
        
        
        <tr
          hidden=""
          s=""
        >
          <td
            class="align-center"
          >
            
            
            <a
              href="null"
              role="button"
            >
              View Photo
            </a>
            
          </td>
          
          <td>
            1
          </td>
          <td>
            1
          </td>
          <td>
            tester
          </td>
          <td
            class="align-center"
          >
            Yet to join
          </td>
          <td>
            tester@tester.com
          </td>
          <td
            class="no-print align-center"
          >
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/details?courseid=&studentemail=tester@tester.com"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View the details of the studen"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               View
            </a>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/edit?courseid=&studentemail=tester@tester.com"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Use this to edit the details o"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               Edit
            </a>
            
            
            
            <button
              class="btn btn-secondary btn-sm mr-2"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Delete the student and the cor"
            >
              Delete
            </button>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/students/records?courseid=&studentemail=tester@tester.com"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View all data about this stude"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/students/recor"
            >
               All Records
            </a>
            
          </td>
        </tr>
        
        
        
        <tr
          hidden=""
          s=""
        >
          <td
            class="align-center"
          >
            
            
            <a
              href="null"
              role="button"
            >
              View Photo
            </a>
            
          </td>
          
          <td>
            Tutorial Group 1
          </td>
          <td>
            Team 1
          </td>
          <td>
            Alice Betsy
          </td>
          <td
            class="align-center"
          >
            Joined
          </td>
          <td>
            alice.b.tmms@gmail.tmt
          </td>
          <td
            class="no-print align-center"
          >
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/details?courseid=&studentemail=alice.b.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View the details of the studen"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               View
            </a>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/edit?courseid=&studentemail=alice.b.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Use this to edit the details o"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               Edit
            </a>
            
            
            
            <button
              class="btn btn-secondary btn-sm mr-2"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Delete the student and the cor"
            >
              Delete
            </button>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/students/records?courseid=&studentemail=alice.b.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View all data about this stude"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/students/recor"
            >
               All Records
            </a>
            
          </td>
        </tr>
        <tr
          s=""
        >
          <td
            class="align-center"
          >
            
            
            <a
              href="null"
              role="button"
            >
              View Photo
            </a>
            
          </td>
          
          <td>
            Tutorial Group 1
          </td>
          <td>
            Team 1
          </td>
          <td>
            Benny Charles
          </td>
          <td
            class="align-center"
          >
            Joined
          </td>
          <td>
            benny.c.tmms@gmail.tmt
          </td>
          <td
            class="no-print align-center"
          >
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/details?courseid=&studentemail=benny.c.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View the details of the studen"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               View
            </a>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/edit?courseid=&studentemail=benny.c.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Use this to edit the details o"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               Edit
            </a>
            
            
            
            <button
              class="btn btn-secondary btn-sm mr-2"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Delete the student and the cor"
            >
              Delete
            </button>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/students/records?courseid=&studentemail=benny.c.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View all data about this stude"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/students/recor"
            >
               All Records
            </a>
            
          </td>
        </tr>
        <tr
          s=""
        >
          <td
            class="align-center"
          >
            
            
            <a
              href="null"
              role="button"
            >
              View Photo
            </a>
            
          </td>
          
          <td>
            Tutorial Group 1
          </td>
          <td>
            Team 1
          </td>
          <td>
            Danny Engrid
          </td>
          <td
            class="align-center"
          >
            Joined
          </td>
          <td>
            danny.e.tmms@gmail.tmt
          </td>
          <td
            class="no-print align-center"
          >
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/details?courseid=&studentemail=danny.e.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View the details of the studen"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               View
            </a>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/edit?courseid=&studentemail=danny.e.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Use this to edit the details o"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               Edit
            </a>
            
            
            
            <button
              class="btn btn-secondary btn-sm mr-2"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Delete the student and the cor"
            >
              Delete
            </button>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/students/records?courseid=&studentemail=danny.e.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View all data about this stude"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/students/recor"
            >
               All Records
            </a>
            
          </td>
        </tr>
        <tr
          s=""
        >
          <td
            class="align-center"
          >
            
            
            <a
              href="null"
              role="button"
            >
              View Photo
            </a>
            
          </td>
          
          <td>
            Tutorial Group 1
          </td>
          <td>
            Team 1
          </td>
          <td>
            Emma Farrell
          </td>
          <td
            class="align-center"
          >
            Joined
          </td>
          <td>
            emma.f.tmms@gmail.tmt
          </td>
          <td
            class="no-print align-center"
          >
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/details?courseid=&studentemail=emma.f.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View the details of the studen"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               View
            </a>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/edit?courseid=&studentemail=emma.f.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Use this to edit the details o"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               Edit
            </a>
            
            
            
            <button
              class="btn btn-secondary btn-sm mr-2"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Delete the student and the cor"
            >
              Delete
            </button>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/students/records?courseid=&studentemail=emma.f.tmms@gmail.tmt"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View all data about this stude"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/students/recor"
            >
               All Records
            </a>
            
          </td>
        </tr>
        
      </tbody>
    </table>
  </div>
</tm-student-list>
`;

exports[`StudentListComponent should snap with some student list data with no sections 1`] = `
<tm-student-list
  backendUrl={[Function String]}
  courseId=""
  courseService={[Function CourseService]}
  enableRemindButton="false"
  httpRequestService={[Function HttpRequestService]}
  isHideTableHead="false"
  listOfStudentsToHide={[Function Array]}
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  router={[Function Router]}
  sections={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  useGrayHeading={[Function Boolean]}
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-bordered table-striped m-0"
    >
      <thead
        class="thead-gray"
        ng-reflect-ng-class="[object Object]"
      >
        <tr>
          <th>
            Photo
          </th>
          
          <th>
             Team 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Student Name 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Status 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Email 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
            Action(s)
          </th>
        </tr>
      </thead>
      <tbody>
        
        
        
        <tr
          s=""
        >
          <td
            class="align-center"
          >
            
            
            <a
              href="null"
              role="button"
            >
              View Photo
            </a>
            
          </td>
          
          <td>
            1
          </td>
          <td>
            tester
          </td>
          <td
            class="align-center"
          >
            Yet to join
          </td>
          <td>
            tester@tester.com
          </td>
          <td
            class="no-print align-center"
          >
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/details?courseid=&studentemail=tester@tester.com"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View the details of the studen"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               View
            </a>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/courses/student/edit?courseid=&studentemail=tester@tester.com"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Use this to edit the details o"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/courses/studen"
            >
               Edit
            </a>
            
            
            
            <button
              class="btn btn-secondary btn-sm mr-2"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="Delete the student and the cor"
            >
              Delete
            </button>
            
            
            <a
              class="btn btn-secondary btn-sm mr-2"
              href="/web/instructor/students/records?courseid=&studentemail=tester@tester.com"
              ng-reflect-klass="btn btn-secondary btn-sm mr-2"
              ng-reflect-ng-class="[object Object]"
              ng-reflect-ngb-tooltip="View all data about this stude"
              ng-reflect-query-params="[object Object]"
              ng-reflect-router-link="/web/instructor/students/recor"
            >
               All Records
            </a>
            
          </td>
        </tr>
        
      </tbody>
    </table>
  </div>
</tm-student-list>
`;

exports[`StudentListComponent should snap with table head set to hidden 1`] = `
<tm-student-list
  backendUrl={[Function String]}
  courseId=""
  courseService={[Function CourseService]}
  enableRemindButton="false"
  httpRequestService={[Function HttpRequestService]}
  isHideTableHead={[Function Boolean]}
  listOfStudentsToHide={[Function Array]}
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  router={[Function Router]}
  sections={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  useGrayHeading={[Function Boolean]}
>
  <div
    class="table-responsive"
  >
    <table
      class="table table-bordered table-striped m-0"
    >
      <thead
        class="thead-gray"
        hidden=""
        ng-reflect-ng-class="[object Object]"
      >
        <tr>
          <th>
            Photo
          </th>
          
          <th>
             Section 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Team 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Student Name 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Status 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
             Email 
            <span
              class="fas fa-sort float-right"
            />
          </th>
          <th>
            Action(s)
          </th>
        </tr>
      </thead>
      <tbody>
        
      </tbody>
    </table>
  </div>
</tm-student-list>
`;
